--- a/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
+++ b/client/src/app/components/assertions/assertions-popover/assertion-popover.component.html
@@ -133,7 +133,7 @@
 
         <nz-descriptions-item nzTitle="Clinical Significance"
           nzSpan="2">
-          {{ assertion.clinicalSignificance | evidenceEnumDisplay }}
+          {{ assertion.significance | evidenceEnumDisplay }}
         </nz-descriptions-item>
 
         <nz-descriptions-item nzTitle="Disease"
