--- a/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
+++ b/client/src/app/components/evidence/evidence-popover/evidence-popover.component.html
@@ -74,7 +74,7 @@
           <!-- clinical significance -->
           <nz-descriptions-item nzTitle="Clinical Significance"
             nzSpan="2">
-            {{ evidence.clinicalSignificance | evidenceEnumDisplay }}
+            {{ evidence.significance | evidenceEnumDisplay }}
           </nz-descriptions-item>
 
           <!-- evidence rating -->
