--- a/client/src/app/components/evidence/evidence-card/evidence-card.component.html
+++ b/client/src/app/components/evidence/evidence-card/evidence-card.component.html
@@ -38,7 +38,7 @@
             <nz-row><b>Evidence Level:&nbsp;</b>{{ evidence.evidenceLevel }}</nz-row>
             <nz-row><b>Evidence Type:&nbsp;</b>{{ evidence.evidenceType | evidenceEnumDisplay }}</nz-row>
             <nz-row><b>Evidence Direction:&nbsp;</b>{{ evidence.evidenceDirection | evidenceEnumDisplay }}</nz-row>
-            <nz-row><b>Clinical Significance:&nbsp;</b>{{ evidence.clinicalSignificance | evidenceEnumDisplay }}</nz-row>
+            <nz-row><b>Clinical Significance:&nbsp;</b>{{ evidence.significance | evidenceEnumDisplay }}</nz-row>
             <nz-row><b>Variant Origin:&nbsp;</b>{{ evidence.variantOrigin | evidenceEnumDisplay }}</nz-row>
             <nz-row [ngPlural]="evidence.therapies.length">
               <ng-template ngPluralCase="=0"><b>Therapy:&nbsp;</b> <i>Not Applicable</i></ng-template>
