--- a/client/src/app/components/evidence/evidence-table/evidence-table.component.html
+++ b/client/src/app/components/evidence/evidence-table/evidence-table.component.html
@@ -113,12 +113,12 @@
         </th>
         <th nzWidth="60px"
           nzRight
-          [nzColumnKey]="sortColumns.ClinicalSignificance"
+          [nzColumnKey]="sortColumns.Significance"
           [nzSortFn]="true"
           nzAlign="center"
           nz-tooltip
-          nzTooltipTitle="Clinical Significance">
-          CS
+          nzTooltipTitle="Significance">
+          S
         </th>
         <th nzWidth="60px"
           nzRight
@@ -233,7 +233,7 @@
             nzSize="small"
             [nzDropdownMatchSelectWidth]="false"
             (ngModelChange)="filterChange$.next()"
-            [(ngModel)]="clinicalSignificanceInput">
+            [(ngModel)]="SignificanceInput">
             <nz-option-group nzLabel="Predictive">
               <nz-option nzValue="SENSITIVITYRESPONSE"
                 nzLabel="Sensitivity/Response"></nz-option>
@@ -432,9 +432,9 @@
             nzRight>
             <nz-tag nz-tooltip
               nzTooltipPlacement="top"
-              [nzTooltipTitle]="!isScrolling ? (eid.clinicalSignificance | evidenceEnumDisplay) : ''">
+              [nzTooltipTitle]="!isScrolling ? (eid.significance | evidenceEnumDisplay) : ''">
               <i nz-icon
-                [nzType]="eid.clinicalSignificance| evidenceEnumDisplay: 'icon-name'"
+                [nzType]="eid.significance| evidenceEnumDisplay: 'icon-name'"
                 class="attribute-icon"></i>
             </nz-tag>
           </td>
