--- a/client/src/app/views/variants/variants-detail/variants-detail.view.html
+++ b/client/src/app/views/variants/variants-detail/variants-detail.view.html
@@ -79,7 +79,7 @@
               *ngIf="viewer.isEditor"
               [disabled]="variant.deprecated"
               nz-popover
-              nzPopoverTitle="Deprecate This Variant"
+              nzPopoverTitle="Deprecate Variant"
               nzPopoverTrigger="click"
               [nzPopoverContent]="deprecateVariantForm"
               nzPopoverPlacement="bottomRight">
