Reload submit source form on navigation to same route.
closes #671

--- a/client/src/app/forms/source-submit/source-submit.form.html
+++ b/client/src/app/forms/source-submit/source-submit.form.html
@@ -35,7 +35,8 @@
         <p>
           Thank You! Your source will now appear in the
           <a routerLink="/curation/queues/pending-sources">
-          Source Suggestion curation queue.</a>
+          Source Suggestion curation queue </a>
+          or you could <a routerLink="/sources/add">submit another.</a>
         </p>
       </ng-template>
     </ng-container>
