fix clinvar linkout in the NONE FOUND case
closes #661

--- a/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
+++ b/client/src/app/views/variants/variants-detail/variants-summary/variants-summary.page.html
@@ -94,7 +94,7 @@
             <!-- clinvar ids-->
             <nz-descriptions-item [nzTitle]="variant.clinvarIds.length > 1 ? 'ClinVar IDs' : 'ClinVar ID'">
               <ng-container *ngIf="variant.clinvarIds.length > 0 else noClinvarIds">
-                <cvc-tag-list *ngIf="variant.clinvarIds[0] !== 'N/A' else clinvarNotApplicable">
+                <cvc-tag-list *ngIf="variant.clinvarIds[0] !== 'N/A' && variant.clinvarIds[0] !== 'NONE FOUND' else clinvarNotApplicable">
                   <ng-container *ngFor="let id of variant.clinvarIds">
                     <cvc-link-tag [href]="'https://www.ncbi.nlm.nih.gov/clinvar/variation/' + id"
                       tooltip="View on ClinVar">
@@ -106,7 +106,7 @@
 
               <ng-template #clinvarNotApplicable>
                 <span nz-typography
-                  nzType="secondary">N/A</span>
+                  nzType="secondary">{{ variant.clinvarIds[0] }}</span>
               </ng-template>
 
               <ng-template #noClinvarIds>
