added GCBR announcement to welcome page, GCBR logo to about page

--- a/client/src/app/views/pages/pages-about/pages-about.page.html
+++ b/client/src/app/views/pages/pages-about/pages-about.page.html
@@ -55,29 +55,42 @@
                 </nz-card>
               </nz-col>
               <nz-col [nzSpan]="6">
-                <nz-card nzType="inner"
-                  nzTitle="Acknowledgements"
-                  style="width: 100%">
-                  <nz-space nzDirection="vertical">
-                    <img *nzSpaceItem src="assets/images/nih-nci-logo.png"
-                      alt="NHI - National Cancer Institute"
-                      style="height: 50px">
-                    <img *nzSpaceItem src="assets/images/icts-logo.png"
-                      alt="Washington University - Institute for Clinical and Translational Sciences"
-                      style="height: 50px">
-                    <img *nzSpaceItem src="assets/images/ga4gh-logo.png"
-                      alt="Global Alliance for Genomics & Health"
-                      style="height: 50px">
-                    <img *nzSpaceItem src="assets/images/nih-nhgri-logo.png"
-                      alt="NHI - National Human Genome Research Institute"
-                      style="height: 50px">
-                    <img *nzSpaceItem src="assets/images/wustl-logo.png"
-                      alt="Washington University in St. Louis"
-                      style="height: 50px">
-                    <img *nzSpaceItem src="assets/images/cdi-logo.jpeg"
-                      alt="Washington University - Children's Discovery Institute"
-                      style="height: 50px">
-                  </nz-space>
+                <nz-card nzType="inner" nzTitle="Acknowledgements" style="width: 100%">
+                  <img
+                    src="assets/images/nih-nci-logo.png"
+                    alt="NHI - National Cancer Institute"
+                    style="height: 50px; margin: 12px"
+                  />
+                  <img
+                    src="assets/images/icts-logo.png"
+                    alt="Washington University - Institute for Clinical and Translational Sciences"
+                    style="height: 50px; margin: 12px"
+                  />
+                  <img
+                    src="assets/images/ga4gh-logo.png"
+                    alt="Global Alliance for Genomics & Health"
+                    style="height: 50px; margin: 12px"
+                  />
+                  <img
+                    src="assets/images/GCBR-Logo-RGB.png"
+                    alt="Global Code Biodata Resources"
+                    style="height: 50px; margin: 12px"
+                  />
+                  <img
+                    src="assets/images/nih-nhgri-logo.png"
+                    alt="NHI - National Human Genome Research Institute"
+                    style="height: 50px; margin: 12px"
+                  />
+                  <img
+                    src="assets/images/wustl-logo.png"
+                    alt="Washington University in St. Louis"
+                    style="height: 50px; margin: 12px"
+                  />
+                  <img
+                    src="assets/images/cdi-logo.jpeg"
+                    alt="Washington University - Children's Discovery Institute"
+                    style="height: 50px; margin: 12px"
+                  />
                 </nz-card>
               </nz-col>
             </nz-row>
