added GCBR announcement to welcome page, GCBR logo to about page

--- a/client/src/app/views/pages/pages-about/pages-about.page.html
+++ b/client/src/app/views/pages/pages-about/pages-about.page.html
@@ -134,6 +134,11 @@
             style="height: 50px; margin: 12px"
           />
           <img
+            src="assets/images/GCBR-Logo-RGB.png"
+            alt="Global Code Biodata Resources"
+            style="height: 50px; margin: 12px"
+          />
+          <img
             src="assets/images/nih-nhgri-logo.png"
             alt="NHI - National Human Genome Research Institute"
             style="height: 50px; margin: 12px"
