--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -53,6 +53,45 @@
           <nz-list-item>
             <nz-list-item-meta>
               <nz-list-item-meta-title>
+                <span>CIViC named as a Global Core Biodata Resource</span>
+                <br />
+                <span nz-typography nzType="secondary"> Dec 15, 2022 </span>
+              </nz-list-item-meta-title>
+            </nz-list-item-meta>
+            <a
+              href="https://globalbiodata.org"
+              title="GCBR Homepage"
+              target="_blank"
+            >
+              <img
+                src="assets/images/GCBR-Logo-RGB.png"
+                alt="The Global Code Biodata Resources Logo"
+                style="float: right; margin: 0 0 8px 8px; height: 75px"
+              />
+            </a>
+            CIViC has been named in a
+            <a
+              href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources/"
+              title="Global Core Biodata Resources List"
+              target="_blank"
+              >list of 37 Global Core Biodata Resources</a
+            >
+            alongside other important resources such as Ensembl, ClinGen and
+            Gnomad. The GCBR includes
+            <a
+              href="https://globalbiodata.org/scientific-activities/global-core-biodata-resources/gcbr-selection-2022/"
+              title="GCBR Selection Process Overview, 2022"
+              target="_blank"
+              >select resources</a
+            >
+            that ensure the long term preservation of biological data, and are
+            of fundamental importance to the biological and life sciences
+            community.
+            <nz-list-item-extra> </nz-list-item-extra>
+          </nz-list-item>
+          <nz-list-item>
+            <nz-list-item-meta>
+              <nz-list-item-meta-title>
                 <span>CIViC Wins ICTR Elevator Pitch Award</span>
                 <br />
                 <span nz-typography nzType="secondary">
@@ -61,9 +100,12 @@
               </nz-list-item-meta-title>
             </nz-list-item-meta>
             At this year's
-            <a href="https://itcr.cancer.gov">Informatics Technology for Cancer Research</a>
-            annual <a href="https://itcr2022.org/#abstracts">meeting in St. Louis</a>, CIViC won 1st prize in the Elevator Pitch
-            contest for "Most
+            <a href="https://itcr.cancer.gov"
+              >Informatics Technology for Cancer Research</a
+            >
+            annual
+            <a href="https://itcr2022.org/#abstracts">meeting in St. Louis</a>,
+            CIViC won 1st prize in the Elevator Pitch contest for "Most
             Potential for Patient Impact". Please check out the award-winning
             elevator pitch, now featured at the top of the
             <a href="/pages/about">About CIViC page</a>.
