--- a/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-detail/molecular-profiles-summary/molecular-profiles-summary.page.html
@@ -50,8 +50,8 @@
             </nz-descriptions-item>
 
             <!-- CIViC Score-->
-            <nz-descriptions-item nzTitle="CIViC Variant Evidence Score">
-              <span nz-typography>{{ mp.evidenceScore | number }}</span>
+            <nz-descriptions-item nzTitle="Molecular Profile Score">
+              <span nz-typography>{{ mp.molecularProfileScore | number }}</span>
             </nz-descriptions-item>
 
             <!-- aliases -->
