remove eid count from variant popover, replace with mp count

--- a/client/src/app/components/variants/variant-popover/variant-popover.component.html
+++ b/client/src/app/components/variants/variant-popover/variant-popover.component.html
@@ -37,9 +37,9 @@
         </nz-descriptions-item>
 
         <!-- evidence item count -->
-        <nz-descriptions-item nzTitle="Evidence Items"
+        <nz-descriptions-item nzTitle="Molecular Profiles"
           nzSpan="2">
-          {{ variant.evidenceItems.totalCount }}
+          {{ variant.molecularProfiles.totalCount }}
         </nz-descriptions-item>
       </nz-descriptions>
 
