--- a/client/src/app/components/molecular-profiles/molecular-profile-popover/molecular-profile-popover.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-popover/molecular-profile-popover.component.html
@@ -19,9 +19,27 @@
         </nz-descriptions-item>
 
         <!-- evidence item count -->
-        <nz-descriptions-item nzTitle="Evidence Items"
+        <nz-descriptions-item *ngIf="mp.evidenceItems.totalCount > 0" nzTitle="Evidence Items"
           nzSpan="2">
           {{ mp.evidenceItems.totalCount }}
+        </nz-descriptions-item>
+
+        <nz-descriptions-item *ngIf="mp.assertions.totalCount > 0" nzTitle="Assertions"
+          nzSpan="2">
+          {{ mp.assertions.totalCount }}
+        </nz-descriptions-item>
+
+        <!-- aliases -->
+        <nz-descriptions-item nzTitle="Aliases">
+          <ng-container *ngIf="mp.molecularProfileAliases.length > 0; else noAliases">
+            <cvc-tag-list>
+              <nz-tag *ngFor="let alias of mp.molecularProfileAliases">{{ alias }}</nz-tag>
+            </cvc-tag-list>
+          </ng-container>
+          <ng-template #noAliases>
+            <span nz-typography
+              nzType="secondary">None specified</span>
+          </ng-template>
         </nz-descriptions-item>
       </nz-descriptions>
 
