--- a/client/src/app/components/variants/coordinates-card/coordinates-card.component.html
+++ b/client/src/app/components/variants/coordinates-card/coordinates-card.component.html
@@ -1,119 +1,128 @@
-<nz-card nzTitle="Representative Variant Coordinates" *ngIf="(variant$ | ngrxPush) as variant">
-  <!-- check for reference build, display empty msg if missing -->
-  <ng-container *ngIf="variant.referenceBuild else noCoordinates">
-    <!-- ref build, ensembl version -->
-    <nz-descriptions nzLayout="horizontal"
-      [nzColumn]="2"
-      nzBordered="true"
-      nzSize="small">
-
-      <nz-descriptions-item nzTitle="Ref. Build">
-        {{ variant.referenceBuild }}
-      </nz-descriptions-item>
-
-      <nz-descriptions-item nzTitle="Ensembl Version">
-        {{ variant.ensemblVersion}}
-      </nz-descriptions-item>
-
-    </nz-descriptions>
-
-    <!-- primary / 5' coordinates -->
-    <ng-container *ngIf="variant.primaryCoordinates?.chromosome">
-      <nz-descriptions *ngIf="variant.primaryCoordinates as coords"
-        nzTitle="{{variant.secondaryCoordinates ? '5\' Coordinates' : 'Coordinates'}}"
-        nzLayout="horizontal"
-        nzBordered="true"
-        nzSize="small"
-        [nzColumn]="{ xxl: 4, xl: 2, lg: 1, md: 1, sm: 1, xs: 1 }">
-
-        <!-- chr. -->
-        <nz-descriptions-item nzTitle="Chr."
-          nzColumn="1">
-          {{ coords.chromosome }}
-        </nz-descriptions-item>
-
-        <!-- start -->
-        <nz-descriptions-item nzTitle="Start"
-          nzColumn="1">
-          {{ coords.start }}
-        </nz-descriptions-item>
-
-        <!-- stop -->
-        <nz-descriptions-item nzTitle="Stop"
-          nzColumn="1">
-          {{ coords.stop }}
-        </nz-descriptions-item>
-
-        <ng-container *ngIf="!variant.secondaryCoordinates">
-          <!-- reference bases -->
-          <nz-descriptions-item nzTitle="Ref. Bases"
-            nzColumn="1">
-            {{ variant.referenceBases | ifEmpty: '--'}}
-          </nz-descriptions-item>
-
-          <!-- variant bases-->
-          <nz-descriptions-item nzTitle="Var. Bases"
-            nzColumn="1">
-            {{ variant.variantBases | ifEmpty: '--'}}
-          </nz-descriptions-item>
-        </ng-container>
-
-        <!-- representative transcript -->
-        <nz-descriptions-item nzTitle="Transcript"
-          nzColumn="5">
-          <cvc-link-tag tooltip="View on Ensembl"
-            [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
-            {{ coords.representativeTranscript }}
-          </cvc-link-tag>
-        </nz-descriptions-item>
-
-      </nz-descriptions>
-    </ng-container>
-
-    <!-- 3' (secondary) coordinates for fusions-->
-    <ng-container *ngIf="variant.secondaryCoordinates">
-      <nz-descriptions *ngIf="variant.secondaryCoordinates as coords"
-        nzTitle="3' Coordinates"
-        nzLayout="horizontal"
-        nzBordered="true"
-        nzSize="small"
-        [nzColumn]="{ xxl: 4, xl: 2, lg: 1, md: 1, sm: 1, xs: 1 }">
-
-        <!-- chromosome -->
-        <nz-descriptions-item nzTitle="Chr."
-          nzColumn="1">
-          {{ coords.chromosome }}
-        </nz-descriptions-item>
-
-        <!-- start -->
-        <nz-descriptions-item nzTitle="Start"
-          nzColumn="1">
-          {{ coords.start }}
-        </nz-descriptions-item>
-
-        <!-- stop -->
-        <nz-descriptions-item nzTitle="Stop"
-          nzColumn="1">
-          {{ coords.stop }}
-        </nz-descriptions-item>
-
-        <!-- representative transcript -->
-        <nz-descriptions-item nzTitle="Transcript"
-          nzColumn="5">
-          <cvc-link-tag tooltip="View on Ensembl"
-            [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
-            {{ coords.representativeTranscript }}
-          </cvc-link-tag>
-        </nz-descriptions-item>
-
-      </nz-descriptions>
-    </ng-container>
-
+<ng-container *ngIf="this.cvcVariantId && (variant$ | ngrxPush) as variant">
+  <ng-container *ngTemplateOutlet="coordinateCard; context: { $implicit: variant }">
   </ng-container>
+</ng-container>
+<ng-container *ngIf="this.cvcCoordinates">
+  <ng-container *ngTemplateOutlet="coordinateCard; context: { $implicit: this.cvcCoordinates}">
+  </ng-container>
+</ng-container>
 
-</nz-card>
+<ng-template #coordinateCard let-variant>
+  <nz-card [nzTitle]="displayTitle ?  'Representative Variant Coordinates'  : undefined">
+    <!-- check for reference build, display empty msg if missing -->
+    <ng-container *ngIf="variant.referenceBuild else noCoordinates">
+      <!-- ref build, ensembl version -->
+      <nz-descriptions nzLayout="horizontal"
+        [nzColumn]="2"
+        nzBordered="true"
+        nzSize="small">
 
-<!-- empty template -->
-<ng-template #noCoordinates>
-  <cvc-empty-revisable notification="No coordinates specified"> </cvc-empty-revisable>
+        <nz-descriptions-item nzTitle="Ref. Build">
+          {{ variant.referenceBuild }}
+        </nz-descriptions-item>
+
+        <nz-descriptions-item nzTitle="Ensembl Version">
+          {{ variant.ensemblVersion}}
+        </nz-descriptions-item>
+
+      </nz-descriptions>
+
+      <!-- primary / 5' coordinates -->
+      <ng-container *ngIf="variant.primaryCoordinates?.chromosome">
+        <nz-descriptions *ngIf="variant.primaryCoordinates as coords"
+          nzTitle="{{variant.secondaryCoordinates ? '5\' Coordinates' : 'Coordinates'}}"
+          nzLayout="horizontal"
+          nzBordered="true"
+          nzSize="small"
+          [nzColumn]="{ xxl: 4, xl: 2, lg: 1, md: 1, sm: 1, xs: 1 }">
+
+          <!-- chr. -->
+          <nz-descriptions-item nzTitle="Chr."
+            nzColumn="1">
+            {{ coords.chromosome }}
+          </nz-descriptions-item>
+
+          <!-- start -->
+          <nz-descriptions-item nzTitle="Start"
+            nzColumn="1">
+            {{ coords.start }}
+          </nz-descriptions-item>
+
+          <!-- stop -->
+          <nz-descriptions-item nzTitle="Stop"
+            nzColumn="1">
+            {{ coords.stop }}
+          </nz-descriptions-item>
+
+          <ng-container *ngIf="!variant.secondaryCoordinates">
+            <!-- reference bases -->
+            <nz-descriptions-item nzTitle="Ref. Bases"
+              nzColumn="1">
+              {{ variant.referenceBases | ifEmpty: '--'}}
+            </nz-descriptions-item>
+
+            <!-- variant bases-->
+            <nz-descriptions-item nzTitle="Var. Bases"
+              nzColumn="1">
+              {{ variant.variantBases | ifEmpty: '--'}}
+            </nz-descriptions-item>
+          </ng-container>
+
+          <!-- representative transcript -->
+          <nz-descriptions-item nzTitle="Transcript"
+            nzColumn="5">
+            <cvc-link-tag tooltip="View on Ensembl"
+              [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
+              {{ coords.representativeTranscript }}
+            </cvc-link-tag>
+          </nz-descriptions-item>
+
+        </nz-descriptions>
+      </ng-container>
+
+      <!-- 3' (secondary) coordinates for fusions-->
+      <ng-container *ngIf="variant.secondaryCoordinates">
+        <nz-descriptions *ngIf="variant.secondaryCoordinates as coords"
+          nzTitle="3' Coordinates"
+          nzLayout="horizontal"
+          nzBordered="true"
+          nzSize="small"
+          [nzColumn]="{ xxl: 4, xl: 2, lg: 1, md: 1, sm: 1, xs: 1 }">
+
+          <!-- chromosome -->
+          <nz-descriptions-item nzTitle="Chr."
+            nzColumn="1">
+            {{ coords.chromosome }}
+          </nz-descriptions-item>
+
+          <!-- start -->
+          <nz-descriptions-item nzTitle="Start"
+            nzColumn="1">
+            {{ coords.start }}
+          </nz-descriptions-item>
+
+          <!-- stop -->
+          <nz-descriptions-item nzTitle="Stop"
+            nzColumn="1">
+            {{ coords.stop }}
+          </nz-descriptions-item>
+
+          <!-- representative transcript -->
+          <nz-descriptions-item nzTitle="Transcript"
+            nzColumn="5">
+            <cvc-link-tag tooltip="View on Ensembl"
+              [href]="'http://www.ensembl.org/Homo_sapiens/transview?transcript=' + coords.representativeTranscript">
+              {{ coords.representativeTranscript }}
+            </cvc-link-tag>
+          </nz-descriptions-item>
+
+        </nz-descriptions>
+      </ng-container>
+    </ng-container>
+  </nz-card>
+
+  <!-- empty template -->
+  <ng-template #noCoordinates>
+    <cvc-empty-revisable notification="No coordinates specified"> </cvc-empty-revisable>
+  </ng-template>
 </ng-template>
