--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -53,6 +53,36 @@
           <nz-list-item>
             <nz-list-item-meta>
               <nz-list-item-meta-title>
+                <span>Introducing Molecular Profiles</span>
+                <br />
+                <span nz-typography nzType="secondary"> January 9th, 2023 </span>
+              </nz-list-item-meta-title>
+            </nz-list-item-meta>
+            Today we have rolled out support for a new core concept in CIViC: 
+            <a href="https://civic.readthedocs.io/en/latest/model/molecular_profiles.html" target="_blank"> Molecular Profiles</a>.
+            Molecular Profiles are logical combinations of one or more CIViC Variants.
+            While most Molecular Profiles will consist of a single Variant (“Simple”) they will also allow users to 
+            build “Complex” (multi-variant) Molecular Profiles to associate Evidence with. 
+            These complex profiles expand the CIViC data model to allow for clinical significance to be evaluated within contexts such 
+            as variant co-occurrence or mutual exclusivity. 
+            Going forward, Evidence will be associated with a Molecular Profile rather than directly with a Variant. 
+            If you have any questions about this change, please feel free to 
+            <a href="mailto:help@civicdb.org">contact us</a>. We have also
+            prepared a <a href="https://www.youtube.com/watch?v=--i54jY746w" target="_blank" >video</a > explaining this new feature.
+            <nz-list-item-extra style="padding-top: 100px">
+              <iframe
+                width="300"
+                src="https://www.youtube.com/embed/--i54jY746w"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </nz-list-item-extra>
+          </nz-list-item>
+          <nz-list-item>
+            <nz-list-item-meta>
+              <nz-list-item-meta-title>
                 <span>CIViC named as a Global Core Biodata Resource</span>
                 <br />
                 <span nz-typography nzType="secondary"> Dec 15, 2022 </span>
@@ -110,59 +140,6 @@
             elevator pitch, now featured at the top of the
             <a href="/pages/about">About CIViC page</a>.
             <nz-list-item-extra></nz-list-item-extra>
-          </nz-list-item>
-          <nz-list-item>
-            <nz-list-item-meta>
-              <nz-list-item-meta-title>
-                <span>CIViC Curation Jamboree & Hackathon</span>
-                <br />
-                <span nz-typography nzType="secondary"> July 30th, 2022 </span>
-              </nz-list-item-meta-title>
-            </nz-list-item-meta>
-            We're excited to announce that CIViC, the Compendium of Cancer
-            Genome Aberrations (CCGA), and the ClinGen Somatic Cancer Clinical
-            Domain Working Group are co-hosting a cancer variant interpretation
-            hackathon and curation jamboree on Saturday July 30 (8AM to 5PM) as
-            a pre-meeting of the CGC Annual Meeting 2022.
-            <a
-              href="https://www.eventbrite.com/e/cancer-variant-interpretation-hackathon-and-curation-jamboree-tickets-327320021997"
-              target="_blank"
-              >Register now!</a
-            >
-            <nz-list-item-extra></nz-list-item-extra>
-          </nz-list-item>
-          <nz-list-item>
-            <nz-list-item-meta>
-              <nz-list-item-meta-title>
-                <span>Welcome to CIViC 2.0!</span>
-                <br />
-                <span nz-typography nzType="secondary"> April 9th, 2022 </span>
-              </nz-list-item-meta-title>
-            </nz-list-item-meta>
-            CIViC 2.0 features a completely redesigned user interface and a more
-            powerful GraphQL API. It provides many new ways to browse the
-            knowledgebase while retaining the CIViC knowledge model you are
-            already familiar with. Furthermore, existing links to CIViC entities
-            will continue to function as before. If you have any questions,
-            comments, or would like help adapting an existing integration to our
-            new API, please email us at
-            <a href="mailto:help@civicdb.org">help@civicdb.org</a>. We have also
-            prepared an introductory video tour of the new interface, please
-            <a
-              href="https://www.youtube.com/watch?v=bpVkSP7qvgc"
-              target="_blank"
-              >check it out</a
-            >!
-            <nz-list-item-extra style="padding-top: 30px">
-              <iframe
-                width="250"
-                src="https://www.youtube.com/embed/bpVkSP7qvgc"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </nz-list-item-extra>
           </nz-list-item>
           <nz-list-item>
             <nz-list-item-meta>
