add announcement for ASH abstract support

--- a/client/src/app/views/welcome/welcome.component.html
+++ b/client/src/app/views/welcome/welcome.component.html
@@ -83,6 +83,23 @@
           <nz-list-item>
             <nz-list-item-meta>
               <nz-list-item-meta-title>
+                <span>Announcing Support for ASH Abstracts </span>
+                <br />
+                <span nz-typography nzType="secondary"> January 9, 2023 </span>
+              </nz-list-item-meta-title>
+            </nz-list-item-meta>
+              <img
+                src="assets/images/ash-control-screenshot.png"
+                alt="Screenshot of Add Source form Control"
+                style="float: right; margin: -20px 8px 8px 8px; height: 75px"
+              />
+              ASH Annual Meeting Abstracts can now be used as Sources when submitting Evidence Items to CIViC. 
+              They can be specified by DOI in the 'Add Source' section of the Evidence form.
+            <nz-list-item-extra> </nz-list-item-extra>
+          </nz-list-item>
+          <nz-list-item>
+            <nz-list-item-meta>
+              <nz-list-item-meta-title>
                 <span>CIViC named as a Global Core Biodata Resource</span>
                 <br />
                 <span nz-typography nzType="secondary"> Dec 15, 2022 </span>
