enable MP popover on assertions page

--- a/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
@@ -185,7 +185,7 @@
 
             <!-- molecular profile -->
             <nz-descriptions-item nzTitle="Molecular Profile Name">
-              <cvc-molecular-profile-tag [molecularProfile]="assertion.molecularProfile" [enablePopover]="false"></cvc-molecular-profile-tag>
+              <cvc-molecular-profile-tag [molecularProfile]="assertion.molecularProfile" [enablePopover]="true"></cvc-molecular-profile-tag>
             </nz-descriptions-item>
 
             <!-- molecular profile expression -->
