rename hgvs expression to hgvs description on the backend

--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -122,10 +122,10 @@
               </ng-template>
             </cvc-revision-list-diff>
           </ng-container>
-          <ng-container *ngSwitchCase="'hgvs_expression_ids'">
+          <ng-container *ngSwitchCase="'hgvs_description_ids'">
             <cvc-revision-list-diff
               [diffObject]="revision.linkoutData.diffValue"
-              entityType="HGVS Expressions">
+              entityType="HGVS Descriptions">
               <ng-template #itemTemplate let-item>
                 <nz-tag>
                   {{ item.displayName }}
