Add ASH as an option for filtering source tables

--- a/client/src/app/components/sources/sources-table/sources-table.component.html
+++ b/client/src/app/components/sources/sources-table/sources-table.component.html
@@ -121,6 +121,8 @@
               nzLabel="PubMed"></nz-option>
             <nz-option nzValue="ASCO"
               nzLabel="ASCO"></nz-option>
+            <nz-option nzValue="ASH"
+              nzLabel="ASH"></nz-option>
           </nz-select>
         </th>
         <th>
