add mp name filtering to mp browse tables

--- a/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
+++ b/client/src/app/components/molecular-profiles/molecular-profile-table/molecular-profile-table.component.html
@@ -99,6 +99,8 @@
       <tr class="filter-row">
         <th nzWidth="200px"
           nzLeft>
+          <cvc-clearable-input-filter [(inputModel)]="mpNameInput"
+            (inputModelChange)="filterChange$.next()"></cvc-clearable-input-filter>
         </th>
         <th nzWidth="100px">
           <cvc-clearable-input-filter [(inputModel)]="aliasInput"
